tools/registry/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: registry
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: registry
          image: registry:2.8.1
          ports:
            - name: registry
              containerPort: 5000
          volumeMounts:
            # - name: credentials
            #   mountPath: /auth
            #   readOnly: true
            - name: registry-images
              mountPath: /var/lib/registry
          resources:
            requests:
              memory: 128Mi
              cpu: 150m
            limits:
              memory: 512Mi
              cpu: 500m
      volumes:
        - name: registry-images
          hostPath:
            path: /var/lib/registry
            type: Directory
