tools/registry/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docker-registry
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  rules:
  - host: registry.pi
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: svc-registry
            port:
              name: http
  tls:
  - secretName: tls-dotpi
